# altair-starpaths-ms

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  requests.http
.github/workflows/: cd.yml  ci.yml
src/: error.rs  main.rs  state.rs
src/models/: api.rs  mod.rs  starpath.rs  starpath_analytics.rs  starpath_chapter.rs  starpath_feedback.rs  starpath_input.rs  starpath_lab.rs  starpath_progress.rs
src/routes/: health.rs  mod.rs  starpath_feedback.rs  starpaths.rs
src/services/: cloud_run_auth.rs  extractor.rs  mod.rs  starpath_feedback_service.rs  starpaths_service.rs
src/tests/: health_test.rs
