[package]
name = "altair-starpaths-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web / async
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
thiserror = "2.0"


# Serde / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1.2", features = ["serde", "v4"] }

# Env
dotenvy = "0.15"

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "tls-rustls"
] }

# Dates
chrono = { version = "0.4", features = ["serde"] }
